--- a/project.json
+++ b/project.json
@@ -18,6 +18,8 @@
         "src/coldetect.js",
         "src/Boundary.js",
         "src/Score.js",
-        "src/Timer.js"
+        "src/Timer.js",
+        "src/Ready.js",
+        "src/MainMenu.js"
     ]
 }
